--- a/styles/index.css
+++ b/styles/index.css
@@ -73,7 +73,8 @@ button{
     font-family: Arial, Helvetica, sans-serif;
     font-size: 18px;
 }
-/* .carruselLibros{
+
+.carruselLibros{
     display: flex;
     margin-left: 50px;
     align-items: center;
@@ -89,7 +90,7 @@ button{
 .carruselLibros img:hover{
     transform: scale(1.1);
     box-shadow: 0px 0px 10px white;
-} */
+}
 
 
 .carrusel-container {
