--- a/styles/pantallaPrincipal.css
+++ b/styles/pantallaPrincipal.css
@@ -83,7 +83,8 @@ h1 {
 }
 
 input{
-    width: 30%;
+    padding: 10px;
+    width: 500px;
     font-size: 1rem;
     border-radius: 20px 0 0 20px;
     outline: none;
@@ -133,7 +134,7 @@ button:hover {
     margin-top: 30px;
 }
 
-/* .container {
+.container {
     width: 100%;
     max-width: 600px;
     margin: 50px auto;
@@ -141,32 +142,6 @@ button:hover {
     display: flex;
 }
 
-.search-box {
-    display: flex;
-    align-items: center;
-}
-
-.search-box input {
-    width: 80%;
-    padding: 10px;
-    font-size: 16px;
-    border: 1px solid #ccc;
-    border-radius: 4px;
-}
-
-.search-box button {
-    padding: 10px 20px;
-    font-size: 16px;
-    background-color: #4CAF50;
-    color: white;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
-}
-
-.search-box button:hover {
-    background-color: #45a049;
-}
 
 .results {
     margin-top: 20px;
@@ -176,7 +151,7 @@ button:hover {
     border-radius: 4px;
     background-color: #e9ffe9;
     display: none; 
-} */
+}
 
 .container-banner{
     width: 100%;
